{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 40,
  "lineage": "a3e132ff-3117-dd25-635e-68f92e78c8af",
  "resources": [
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:network-acl/acl-0a3ff592419453e6f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a3ff592419453e6f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "804295906245",
            "subnet_ids": [
              "subnet-03316d5af69dc73a0",
              "subnet-0d0cd9201f30de63f"
            ],
            "tags": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da1cf25cb678e7f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06d1b0d37c41f7a90",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da1cf25cb678e7f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_route_table.private",
            "module.public_subnets.aws_eip.public",
            "module.public_subnets.aws_nat_gateway.public",
            "module.public_subnets.aws_route_table.private",
            "module.public_subnets.aws_route_table.public",
            "module.public_subnets.aws_subnet.private",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04f3d1147e6ef4ae01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-052d07e187bc706a8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f3d1147e6ef4ae0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_subnets.aws_route_table.private",
            "module.public_subnets.aws_eip.public",
            "module.public_subnets.aws_nat_gateway.public",
            "module.public_subnets.aws_route_table.private",
            "module.public_subnets.aws_route_table.public",
            "module.public_subnets.aws_subnet.private",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0da1cf25cb678e7f9",
            "id": "rtb-0da1cf25cb678e7f9",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1a",
              "Type": "private",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1a",
              "Type": "private",
              "key": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-04f3d1147e6ef4ae0",
            "id": "rtb-04f3d1147e6ef4ae0",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1b",
              "Type": "private",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1b",
              "Type": "private",
              "key": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0132a893d3cdad66d",
            "route_table_id": "rtb-0da1cf25cb678e7f9",
            "subnet_id": "subnet-03316d5af69dc73a0"
          },
          "dependencies": [
            "module.private_subnets.aws_route_table.private",
            "module.private_subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0412c4162d93c447b",
            "route_table_id": "rtb-04f3d1147e6ef4ae0",
            "subnet_id": "subnet-0d0cd9201f30de63f"
          },
          "dependencies": [
            "module.private_subnets.aws_route_table.private",
            "module.private_subnets.aws_subnet.private",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-03316d5af69dc73a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.9.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03316d5af69dc73a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1a",
              "Type": "private",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1a",
              "Type": "private",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0d0cd9201f30de63f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.9.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0cd9201f30de63f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1b",
              "Type": "private",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "private",
              "Name": "refarch-dev-private-subnet-private-us-east-1b",
              "Type": "private",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030857b0ad14ceccf",
            "domain": "vpc",
            "id": "eipalloc-030857b0ad14ceccf",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-233-86.compute-1.amazonaws.com",
            "public_ip": "52.206.233.86",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet",
              "key": "dev"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8648ec072a6e9a9",
            "domain": "vpc",
            "id": "eipalloc-0b8648ec072a6e9a9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-5-245.compute-1.amazonaws.com",
            "public_ip": "3.215.5.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet",
              "key": "dev"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030857b0ad14ceccf",
            "connectivity_type": "public",
            "id": "nat-06d1b0d37c41f7a90",
            "network_interface_id": "eni-0014f50bd1a5ca19f",
            "private_ip": "10.9.10.103",
            "public_ip": "52.206.233.86",
            "subnet_id": "subnet-0a5dba34d6b7f7cd5",
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1a",
              "Type": "public",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1a",
              "Type": "public",
              "key": "dev"
            }
          },
          "dependencies": [
            "module.public_subnets.aws_eip.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8648ec072a6e9a9",
            "connectivity_type": "public",
            "id": "nat-052d07e187bc706a8",
            "network_interface_id": "eni-0884a6be529098ff4",
            "private_ip": "10.9.22.164",
            "public_ip": "3.215.5.245",
            "subnet_id": "subnet-0a9ace17cdc35dd54",
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1b",
              "Type": "public",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1b",
              "Type": "public",
              "key": "dev"
            }
          },
          "dependencies": [
            "module.public_subnets.aws_eip.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:network-acl/acl-0565e63ec061c7c14",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0565e63ec061c7c14",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "804295906245",
            "subnet_ids": [
              "subnet-0a5dba34d6b7f7cd5",
              "subnet-0a9ace17cdc35dd54"
            ],
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01de8570e9fbb372f",
            "id": "r-rtb-021b96c14b6aed9aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021b96c14b6aed9aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01de8570e9fbb372f",
            "id": "r-rtb-0747450472c06ee241080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0747450472c06ee24",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.vpc.aws_internet_gateway.default",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-021b96c14b6aed9aa",
            "id": "rtb-021b96c14b6aed9aa",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1a",
              "Type": "public",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1a",
              "Type": "public",
              "key": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:route-table/rtb-0747450472c06ee24",
            "id": "rtb-0747450472c06ee24",
            "owner_id": "804295906245",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1b",
              "Type": "public",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1b",
              "Type": "public",
              "key": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051b286f19f684d5e",
            "route_table_id": "rtb-021b96c14b6aed9aa",
            "subnet_id": "subnet-0a5dba34d6b7f7cd5"
          },
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ecbfa9ea36fe699",
            "route_table_id": "rtb-0747450472c06ee24",
            "subnet_id": "subnet-0a9ace17cdc35dd54"
          },
          "dependencies": [
            "module.public_subnets.aws_route_table.public",
            "module.public_subnets.aws_subnet.public",
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0a5dba34d6b7f7cd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.9.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5dba34d6b7f7cd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1a",
              "Type": "public",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1a",
              "Type": "public",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:subnet/subnet-0a9ace17cdc35dd54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.9.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9ace17cdc35dd54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804295906245",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1b",
              "Type": "public",
              "key": "dev"
            },
            "tags_all": {
              "Attributes": "public",
              "Name": "refarch-dev-public-subnet-public-us-east-1b",
              "Type": "public",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:security-group/sg-0e8601d5486304d63",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e8601d5486304d63",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "804295906245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "refarch-dev-vpc-default",
              "key": "dev"
            },
            "tags_all": {
              "Name": "refarch-dev-vpc-default",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:internet-gateway/igw-01de8570e9fbb372f",
            "id": "igw-01de8570e9fbb372f",
            "owner_id": "804295906245",
            "tags": {
              "Name": "refarch-dev-vpc",
              "key": "dev"
            },
            "tags_all": {
              "Name": "refarch-dev-vpc",
              "key": "dev"
            },
            "vpc_id": "vpc-0a6eff4caaf688101"
          },
          "dependencies": [
            "module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804295906245:vpc/vpc-0a6eff4caaf688101",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.9.0.0/16",
            "default_network_acl_id": "acl-0d6b20fe6105fe211",
            "default_route_table_id": "rtb-042143360c2525d88",
            "default_security_group_id": "sg-0e8601d5486304d63",
            "dhcp_options_id": "dopt-a6babfdd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6eff4caaf688101",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0c997143925c00f6d",
            "ipv6_cidr_block": "2600:1f18:3618:c500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-042143360c2525d88",
            "owner_id": "804295906245",
            "tags": {
              "Name": "refarch-dev-vpc",
              "key": "dev"
            },
            "tags_all": {
              "Name": "refarch-dev-vpc",
              "key": "dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}